@@ -19,20 +19,13 @@ Placeholders
 
 Version 1.1.0
 -------------
- * fill in all docstrings (at the very least, for classes and module-level
-   functions)
-   . tx.proxy - DONE
-   . tx.schedulers - DONE
-   . tx.application - DONE
- * eliminate old methods (such as AdminUserConfig.checkAccess) that were part
-   of the old API
  * add weighted host scheduler (use code from when I was at PBS)
+ * add web admin UI support for enabling groups
  * add a configuration checker and write out the new ones to disk
    . back up the old ones
    . disable by default; add configuration option in manager
    . store initial configuration in memory as an unparsed string (for
      comparison)
- * add web admin UI support for enabling groups
 
 
 Version 1.2.0
@@ -52,7 +45,9 @@ Version 1.2.0
  * sort service groups in admin UI by name
  * cache DNS lookups
  * start adding unit tests
- * support a configurable option to log connections to balanced servers
+ * continue adding any missing docstring
+ * support a configurable option to log connections that are made to the
+   proxied hosts
 
 
 Version 1.3.0
@@ -67,6 +62,8 @@ Version 1.3.0
    . let old connections on old pydir finish (run to completion) before exiting
    . look at (again) JP's live process migration work from several years ago
  * add diffs for examining running/stored configurations
+ * drop as much of config.__init__ as possible and map XML directly to model
+   objects instead
  * move CSS into a static file
  * continue adding unit tests
 
